@@ -1,8 +1,8 @@
 
+
 \RCSdef{\alphashapeRevision}{$Revision$}
 \RCSdefDate{\alphashapeDate}{$Date$}
 
-%----------------------------------------------------------------------
 
 \chapter{3D Alpha Shapes} \label{I1_ChapterAlphashapes3D}
 \ccChapterAuthor{Tran Kai Frank Da \and Mariette Yvinec}
