@@ -36,7 +36,7 @@ if the face is a Gabriel face or a convex hull face.
 
 The class \ccRefName\ is paremetrized by a number type \ccc{NT}.
 
-\ccInclude{CGAL/Alpha_status.h}
+\ccInclude{CGAL/Alpha_shape_cell_base_3.h}
 
 
 
